fix spacing for paragraph and lists

--- a/packages/odyssey/src/scss/base/_typography-header.scss
+++ b/packages/odyssey/src/scss/base/_typography-header.scss
@@ -26,7 +26,7 @@ h6 {
 
 h1,
 h2 {
-  margin: 0 0 $spacing-m 0;
+  margin: 0 0 $spacing-s 0;
   line-height: 1.2;
 }
 
