--- a/packages/odyssey/src/scss/base/_typography-text.scss
+++ b/packages/odyssey/src/scss/base/_typography-text.scss
@@ -53,7 +53,7 @@ blockquote {
 
 p {
   max-width: $max-line-length;
-  margin-bottom: $spacing-m;
+  margin-bottom: $spacing-l;
 
   &:last-child {
     margin-bottom: 0;
